upd & clean code